--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Javascript + DOM</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>Javascript + DOM</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-	<h1>Shopping List</h1>
-	<p id="first">Get it done today</p>
-	<input id="userinput" type="text" placeholder="enter items">
-	<button id="enter">Enter</button>
-	<ul>
-		<li class="bold red" random="23">Notebook</li>
-		<li>Jello</li>
-		<li>Spinach</li>
-		<li>Rice</li>
-		<li>Birthday Cake</li>
-		<li>Candles</li>
-	</ul>
-	<script type="text/javascript" src="script.js"></script>
+    <h1>Shopping List</h1>
+    <p id="first">Get it done today</p>
+    <input id="userinput" type="text" placeholder="enter items">
+    <button id="enter">Enter</button>
+    <ul>
+        <div>
+            <li class="bold red" random="23">Notebook</li>
+        </div>
+        <div>
+            <li>Jello</li>
+        </div>
+        <div>
+            <li>Spinach</li>
+        </div>
+        <div>
+            <li>Rice</li>
+        </div>
+        <div>
+            <li>Birthday Cake</li>
+        </div>
+        <div>
+            <li>Candles</li>
+        </div>
+    </ul>
+    <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
